--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
@@ -31,6 +31,11 @@
         align-items: center;
     }
 }
+.folder {
+    i {
+        color: rgb(255, 196, 0);
+    }
+}
 :host ::ng-deep {
     .p-button {
         background-color: $primary;
