--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -71,6 +71,14 @@
             </div>
           </a>
         </li>
+        <li class="p-2 rounded" routerLinkActive="active">
+          <a class="" [routerLink]="['/createtemplate']">
+            <div>
+              <i class="bi bi-folder-plus"></i>
+              &nbsp; Tạo template
+            </div>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
