--- a/src/app/features/post-login/school-side/assignment/approve-assignment/approve-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/approve-assignment/approve-assignment.component.html
@@ -5,7 +5,167 @@
   [style]="{ width: '70vw', height: '800px' }"
   [draggable]="false"
   [resizable]="false"
-></p-dialog>
+>
+  <div *ngIf="selectedAssignment" class="row assignment-container">
+    <div class="col-md-8 left-box">
+      <div class="height-100">
+        <span class="text-black-50">Tên công việc</span>
+        <br />
+        <span class="font-weight-bold mt-1">{{
+          selectedAssignment.assignmentName
+        }}</span>
+      </div>
+      <div class="height-100">
+        <span class="text-black-50">Chi tiết công việc</span>
+        <br />
+        <span class="font-weight-bold mt-1">{{
+          selectedAssignment.description
+        }}</span>
+      </div>
+      <!-- file -->
+      <div>
+        <div class="d-flex justify-content-between">
+          <div>
+            <span class="text-black-50">Tài liệu</span>
+          </div>
+        </div>
+        <br />
+        <div *ngIf="documents.length > 0">
+          <ng-container *ngFor="let doc of documents">
+            {{ doc.documentCode }}-{{ doc.documentName }}
+            <br />
+          </ng-container>
+        </div>
+      </div>
+      <!-- comment -->
+      <div class="height-100">
+        <br />
+        <form [formGroup]="commentForm">
+          <div class="comment d-flex">
+            <input
+              formControlName="content"
+              pInputText
+              type="text"
+              placeholder="Gửi bình luận"
+              (keydown)="onKeyPress($event)"
+            />
+            <div
+              class="d-flex justify-content-center align-items-center p-2"
+              (click)="sendComment()"
+            >
+              <i class="bi bi-send"></i>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div *ngIf="selectedAssignment.comments" class="comment-content pt-2">
+        <div
+          *ngFor="let item of selectedAssignment.comments"
+          class="comment-item row"
+        >
+          <div
+            class="comment-item-person col-md-1 d-flex justify-content-center align-items-center"
+          >
+            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+          </div>
+          <div class="comment-item-content col-md-10">
+            <span class="font-weight-bold font-size-18"
+              >{{ item.userName }}
+            </span>
+            <span class="text-black-50 comment-date">{{
+              item.createdDate | date : "dd/MM/yyyy"
+            }}</span>
+
+            <br />
+            <span>{{ item.content }}</span>
+          </div>
+          <div
+            class="col-md-1 d-flex justify-content-center align-items-center"
+          >
+            <i class="bi bi-three-dots-vertical"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 right-box">
+      <div class="height-100">
+        <span class="text-black-50">Người giao</span>
+        <br />
+        <div class="row mt-1">
+          <div
+            class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+          >
+            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+          </div>
+          <div class="col-md-10 d-flex align-items-center">
+            <span class="font-weight-bold">{{
+              selectedAssignment.assigner.user.fullName
+            }}</span>
+          </div>
+        </div>
+      </div>
+      <div class="height-100">
+        <span class="text-black-50">Người làm</span>
+        <br />
+        <div class="row mt-1">
+          <div
+            class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+          >
+            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+          </div>
+          <div class="col-md-10 d-flex align-items-center">
+            <span class="font-weight-bold">{{
+              selectedAssignment.assignee.user.fullName
+            }}</span>
+          </div>
+        </div>
+      </div>
+      <div class="height-100">
+        <span class="text-black-50">Hạn nộp</span>
+        <br />
+        <span class="font-weight-bold mt-1">{{
+          selectedAssignment.deadline | date : "dd/MM/yyyy"
+        }}</span>
+      </div>
+      <div class="height-100">
+        <span class="text-black-50">Trạng thái</span>
+        <br />
+        <span class="mt-1">
+          <form [formGroup]="assignmentForm">
+            <p-dropdown formControlName="status" [options]="statusOptions">
+              <ng-template let-option pTemplate="selectedItem">
+                <p-tag
+                  class="status"
+                  [severity]="option.severity"
+                  [rounded]="true"
+                >
+                  {{ option.label }}
+                </p-tag>
+              </ng-template>
+              <ng-template let-option pTemplate="item">
+                <p-tag
+                  class="status"
+                  [severity]="option.severity"
+                  [rounded]="true"
+                  [ngClass]="{ 'disabled-option': option.disabled }"
+                >
+                  {{ option.label }}
+                </p-tag>
+              </ng-template>
+            </p-dropdown>
+          </form>
+        </span>
+      </div>
+      <div class="height-100">
+        <span class="text-black-50">Ngày tạo</span>
+        <br />
+        <span class="font-weight-bold mt-1">{{
+          selectedAssignment.createdDate | date : "dd/MM/yyyy"
+        }}</span>
+      </div>
+    </div>
+  </div>
+</p-dialog>
 <p-table
   #dt
   [value]="assignments"
@@ -25,18 +185,16 @@
       <th>
         <div>Tên</div>
       </th>
-
+      <th>
+        <div>Trạng thái</div>
+      </th>
       <th>
         <div>Người giao</div>
       </th>
       <th>
         <div>Người làm</div>
       </th>
-      <th>
-        <div>Trạng thái</div>
-      </th>
-      <th></th>
-      <th></th>
+
       <th></th>
     </tr>
   </ng-template>
@@ -49,59 +207,48 @@
         {{ assignment.assignmentName }}
       </td>
       <td>
-        {{ assignment.assigner.assignerName }}
+        <p-tag
+          class="status"
+          [severity]="getStatusSeverity(assignment?.status.statusId)"
+          [rounded]="true"
+        >
+          {{ assignment?.status.statusName }}
+        </p-tag>
       </td>
       <td>
-        {{ assignment.assignee.assigneeName }}
-        <!-- Editable dropdown cell for assigneeName -->
+        {{ assignment.assigner.user.fullName }}
       </td>
       <td>
-        <p-cellEditor>
-          <ng-template pTemplate="input">
-            <!-- <p-dropdown
-              [options]="statusOptions"
-              [(ngModel)]="assignment.status"
-            ></p-dropdown> -->
-          </ng-template>
-          <ng-template pTemplate="output">
-            <p-tag class="status" [severity]="'info'" [rounded]="true">
-              Đang thực thi
-            </p-tag>
-          </ng-template>
-        </p-cellEditor>
+        {{ assignment.assignee.user.fullName }}
       </td>
+
       <td>
         <button pButton (click)="assVisibleToggle(assignment)">Chi tiết</button>
       </td>
-      <td>
-        <!-- Save and cancel buttons for row editing -->
+      <!-- <td>
         <button
           *ngIf="dt.isRowEditing(assignment)"
-          pButton
           pRipple
           type="button"
           pSaveEditableRow
           (click)="onRowEditSave(i)"
           class="p-button-rounded p-button-text p-button-success mr-2"
         >
-          save
+          <i class="bi bi-check-lg"></i>
         </button>
         <button
           *ngIf="dt.isRowEditing(assignment)"
-          pButton
           pRipple
           type="button"
           pCancelEditableRow
           (click)="onRowEditCancel(i)"
           class="p-button-rounded p-button-text p-button-danger"
         >
-          cancel
+          <i class="bi bi-x-lg"></i>
         </button>
       </td>
       <td>
-        <!-- Edit button -->
         <button
-          pButton
           pRipple
           type="button"
           pInitEditableRow
@@ -109,9 +256,9 @@
           class="p-button-rounded p-button-text"
           *ngIf="!dt.isRowEditing(assignment)"
         >
-          edit
+          <i class="bi bi-pencil-fill"></i>
         </button>
-      </td>
+      </td> -->
     </tr>
   </ng-template>
 </p-table>
