--- a/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.scss
@@ -130,3 +130,29 @@ ul {
         color: $primary-hover;
     }
 }
+.file-item {
+    background-color: #f9fafb;
+    height: 100%;
+    // border: 0.8px solid rgb(169, 169, 169);
+    border-radius: 10px;
+    font-size: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    .file-item-content {
+        span {
+            max-width: 100%;
+            white-space: wrap; /* Prevent text from wrapping */
+            overflow: hidden; /* Hide overflowing text */
+            text-overflow: ellipsis; /* Display ellipsis for overflowing text */
+        }
+    }
+    .file-item-icon {
+        img {
+            width: 40px;
+            height: 40px;
+        }
+    }
+    &:hover {
+        cursor: pointer;
+        background-color: rgb(244, 244, 244);
+    }
+}
